--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Homepage: https://libgit2.github.com/
 Vcs-Git: https://salsa.debian.org/debian/libgit2.git
 Vcs-Browser: https://salsa.debian.org/debian/libgit2
 Rules-Requires-Root: no
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ bookworm
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ trixie
 
 Package: libgit2-dev
 Architecture: any
